# ethereum-erc-rag

./: README.md  ai_agent_notebook.ipynb  app.py  main.py  pyproject.toml  read_repo_data.ipynb
eval/: data_generation.py  evaluations.py
eval_logs/: gh_agent_20251002_014347_ae5205.json  gh_agent_20251002_014400_f5efb5.json  gh_agent_20251002_014410_e81297.json  gh_agent_20251002_014420_b55e63.json  gh_agent_20251002_014431_2ff658.json  gh_agent_20251002_014442_e5abb8.json  gh_agent_20251002_014451_d5c632.json  gh_agent_20251002_014501_7e21d6.json  gh_agent_20251002_014513_c001f7.json  gh_agent_20251002_014524_4ccc94.json
src/: ingest.py  logs.py  main.py  search_agent.py  search_tools.py
